# masterkeys-linux

./: .gitignore  .travis.yml  CMakeLists.txt  FindLibUSB.cmake  FindLibUSB.txt  FindLibs.cmake  INTERFACE.md  README.md  clean.sh  setup.py
docs/: CMakeLists.txt  FindSphinx.cmake  conf.py  doxygen.conf  index.rst  requirements.txt
docs/libmk/: documentation.rst  index.rst
docs/masterkeys/: index.rst
docs/source/: devices.rst  index.rst
docs/source/examples/: ambilight.rst  index.rst  photo.rst
docs/source/libmk/: documentation.rst  index.rst
docs/source/libmk/consts/: index.rst
docs/source/libmk/documentation/: index.rst
docs/source/libmk/documentation/enums/: controlmode.rst  index.rst
docs/source/libmk/documentation/funcs/: comms.rst  index.rst  leds.rst  lib.rst
docs/source/libmk/documentation/funcs/ctrl/: set_device.rst
docs/source/libmk/documentation/funcs/lib/: init.rst
docs/source/libmk/enums/: effect.rst  layout.rst  model.rst  result.rst  size.rst
docs/source/libmk/funcs/: ctrl.rst  handles.rst  mgmt.rst
docs/source/libmk/structs/: device.rst  effect_details.rst  firmware.rst  handle.rst  index.rst
docs/source/libmkc/: index.rst
docs/source/libmkc/enums/: index.rst
docs/source/libmkc/funcs/: index.rst
docs/source/libmkc/structs/: index.rst
docs/source/masterkeys/: index.rst
examples/: CMakeLists.txt  README.md
examples/ambilight/: CMakeLists.txt  ambilight.c
examples/notifications/: CMakeLists.txt  capture.h  mk_notifications.c  notifications.py
examples/photoviewer/: viewer.py
libmk/: CMakeLists.txt  libmk.c  libmk.h  libmkc.c  libmkc.h
libmkc/: CMakeLists.txt  libmkc.c  libmkc.h
masterkeys/: CMakeLists.txt  __init__.py  masterkeys.c
utils/: CMakeLists.txt  README.md  ctrl.c  main.c  record.c
